# Icarus

./: .gitignore  README.md  模型旋转不变，.md
DeZero/: core.py  function.py  test.py  utils.py
DeZeroPackage/dezero/: __init__.py  core.py  datasets.py  functions.py  layers.py  models.py  optimizers.py  simple_core.py  utils.py
DeZeroPackage/test/: test1.py
IcaZeroPackage/icazero/: functions.py  layers.py  models.py  optimizers.py
cmakelearn/test1/: CMakeLists.txt  sub.cpp
cutemat/cucumat/: cucumat.py
cutemat/cucumat/cuda/: cucumat.cu
kernel/: CMakeLists.txt  lib_load.py
kernel/cuda/: ica.cu  kernel.cu  kernel.cuh  tmp_kernel.cu
kernel/cuda/utils/: device.cu
src/algorithm/conv/: conv1.cu  im2col.cu  perflog.csv
src/algorithm/fft/: CooleyTurkey.cu  Stockham.cu
src/algorithm/gemm/: mmult.cu
src/algorithm/sort/: bitonic.cu
src/utils/: Complex.cu  Complex.cuh
studyNotes/: FFT.md
temp/DeZeroPackage/dezero/: __init__.py  core.py  layers.py  simple_core.py  utils.py
temp/DeZeroPackage/test/: step33.py  step37.py  step44.py
temp/IcaZeroPackage/icazero/: __init__.py  core.py  functions.py  optimizers.py
temp/IcaZeroPackage/test/: testopt.py
temp/cmakelearn/test1/: CMakeLists.txt  add.cpp  main  main.cpp
temp/cutemat/cucumat/: CMakeLists.txt
temp/kernel/: CMakeLists.txt  kernel.py  lib_load.py  test.py
temp/kernel/cuda/: data_error.cuh  ica.cu  kernel_0.cu
temp/kernel/cuda/oi/: out.cuh  print.cu  print.cuh
temp/kernel/cuda/operator/: fft.cu  fft.cuh  fouroperations.cu  fouroperations.cuh  gemm.cu  gemm.cuh  non_optimized.cu  non_optimized.cuh  test_gemm.cu
temp/kernel/cuda/utils/: device.cuh  random.cu  random.cuh
temp/src/algorithm/conv/: im2col  im2col.cu  perflog.csv  test.cpp
temp/src/algorithm/fft/: Stockham.cu
temp/src/algorithm/gemm/: mmult.cu  test.cu
temp/src/algorithm/sort/: bitonicV2.cu
temp/src/utils/: Complex.cuh
workPlan/: 工作计划.md  框架的说明.md  框架规划.md  规范.md
